--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -402,7 +402,7 @@
     <string name="password_protect_hidden_items">Apsaugoti slaptažodžiu paslėptų elementų matomumą</string>
     <string name="password_protect_whole_app">Apsaugoti slaptažodžiu visą programėlę</string>
     <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
-    <string name="keep_last_modified">Saugiti seną paskiausiai pakeista reikšmę kopijuojant/perkeliant/pervardinant</string>
+    <string name="keep_last_modified">Keep old last-modified value at file operations</string>
     <string name="show_info_bubble">Rodyti informacijos burbuliuką esant slinkties elementams velkant slinkties juostą</string>
     <string name="prevent_phone_from_sleeping">Neleisti telefonui užmigti, kai programėlė veikia fone</string>
     <string name="skip_delete_confirmation">Visada praleisti ištrynimo patvirtinimo dialogą</string>
