--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -387,7 +387,7 @@
     <string name="password_protect_hidden_items">Afficher les éléments protégés par mot de passe</string>
     <string name="password_protect_whole_app">Le mot de passe protège l\'ensemble de l\'application</string>
     <string name="password_protect_file_deletion">Protéger par mot de passe la suppression et le déplacement de fichiers</string>
-    <string name="keep_last_modified">Conserver la valeur de l\'ancienne modification lors de la copie, du déplacement ou du renommage du fichier</string>
+    <string name="keep_last_modified">Keep old last-modified value at file operations</string>
     <string name="show_info_bubble">Afficher une bulle d\'information des éléments lors de l\'utilisation de la barre de défilement</string>
     <string name="prevent_phone_from_sleeping">Ne pas mettre en veille tant que l\'application est active</string>
     <string name="skip_delete_confirmation">Ne jamais afficher le dialogue de confirmation de suppression</string>
