--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -385,7 +385,7 @@
     <string name="password_protect_hidden_items">用密碼保護隱藏的物件</string>
     <string name="password_protect_whole_app">用密碼保護整個應用程式</string>
     <string name="password_protect_file_deletion">用密碼保護檔案刪除或移動</string>
-    <string name="keep_last_modified">當檔案複製/移動/重新命名時，保留舊的[最後修改]數值</string>
+    <string name="keep_last_modified">Keep old last-modified value at file operations</string>
     <string name="show_info_bubble">拖曳滾動條時，顯示訊息氣泡</string>
     <string name="prevent_phone_from_sleeping">當程式在前景使用時，防止手機進入睡眠</string>
     <string name="skip_delete_confirmation">刪除不再進行確認</string>
