--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="details">Details</string>
     <string name="notes">Notes</string>
     <string name="deleting_folder">Deleting folder \'%s\'</string>
-    <string name="none">None</string>
+    <string name="none" translatable="false">None</string>
     <string name="label">Label</string>
     <string name="transparent">Transparent</string>
     <string name="transparent_color">Transparent color</string>
