adding a new license for Gesture Views

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -589,4 +589,5 @@
     <string name="panorama_view_title">VR Panorama View (affichage des panoramas)</string>
     <string name="sanselan_title">Apache Sanselan (lecture de métadonnées d\'image)</string>
     <string name="filters_title">Android Photo Filters (filtres d\'image)</string>
+    <string name="gesture_views_title">GestureViews (zoomable images)</string>
 </resources>
