--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -610,4 +610,5 @@
     <string name="panorama_view_title">VR Panorama View (zobrazovanie panorám)</string>
     <string name="sanselan_title">Apache Sanselan (čítanie metadát obrázkov)</string>
     <string name="filters_title">Android Photo Filters (filtre obrázkov)</string>
+    <string name="gesture_views_title">GestureViews (priblížiteľné obrázky)</string>
 </resources>
