--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -588,4 +588,5 @@
     <string name="panorama_view_title">VR Panorama View（顯示全景）</string>
     <string name="sanselan_title">Apache Sanselan（讀取圖片詮釋資料）</string>
     <string name="filters_title">Android Photo Filters（圖片過濾器）</string>
+    <string name="gesture_views_title">GestureViews (zoomable images)</string>
 </resources>
