--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -320,7 +320,7 @@
     </plurals>
     <plurals name="in_hours">
         <item quantity="one">ساعة</item>
-        <item quantity="other">ساعتان</item>
+        <item quantity="two">ساعتان</item>
         <item quantity="other">%d ساعات</item>
     </plurals>
 
@@ -592,5 +592,6 @@
     <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
     <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
     <string name="filters_title">Android Photo Filters (image filters)</string>
+    <string name="gesture_views_title">GestureViews (zoomable images)</string>
 </resources>
 
