--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -608,4 +608,5 @@
     <string name="panorama_view_title">VR Panorama View (prikaz panorama)</string>
     <string name="sanselan_title">Apache Sanselan (čitanje metapodataka slike)</string>
     <string name="filters_title">Android Photo Filters (filteri za slike)</string>
+    <string name="gesture_views_title">GestureViews (zoomable images)</string>
 </resources>
