--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -68,6 +68,9 @@
     <string name="copy_move">نسخ / نقل</string>
     <string name="copy_to">نسخ إلى</string>
     <string name="move_to">نقل إلى</string>
+    <string name="source">Source</string>
+    <string name="destination">Destination</string>
+    <string name="select_destination">Select destination</string>
     <string name="click_select_destination">Click here to select destination</string>
     <string name="invalid_destination">Could not write to the selected destination</string>
     <string name="please_select_destination">Please select a destination</string>
