--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -385,7 +385,7 @@
     <string name="password_protect_hidden_items">Proteggi con password gli elementi nascosti</string>
     <string name="password_protect_whole_app">Proteggi con password tutta l\'applicazione</string>
     <string name="password_protect_file_deletion">Proteggi con password l\'eliminazione e lo spostamento dei file</string>
-    <string name="keep_last_modified">Mantieni l'ultimo vecchio valore modificato durante le operazioni sui file</string>
+    <string name="keep_last_modified">Mantieni l\'ultimo vecchio valore modificato durante le operazioni sui file</string>
     <string name="show_info_bubble">Mostra un fumetto informativo durante il trascinamento della barra di scorrimento</string>
     <string name="prevent_phone_from_sleeping">Impedisci allo schermo di spegnersi mentre l\'app è in primo piano</string>
     <string name="skip_delete_confirmation">Non chiedere mai la conferma di eliminazione</string>
