--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -22,6 +22,7 @@
     <string name="transparent">Transparent</string>
     <string name="transparent_color">Transparent color</string>
     <string name="select_a_different_color">Select a different color</string>
+    <string name="download">Download</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriti</string>
@@ -420,6 +421,10 @@
     <string name="recycle_bin_cleaning_interval">Interval čišćenja koša za smeće</string>
     <string name="empty_recycle_bin">Isprazni koš za smeće</string>
     <string name="force_portrait_mode">Prikaz stavke u portretnom formatu</string>
+    <string name="export_settings">Export settings</string>
+    <string name="import_settings">Import settings</string>
+    <string name="settings_exported_successfully">Settings exported successfully</string>
+    <string name="settings_imported_successfully">Settings imported successfully</string>
 
     <!-- Setting sections -->
     <string name="visibility">Vidljivost</string>
@@ -560,6 +565,12 @@
             <a href="%1$s">%2$s</a><br><br>
             Možeš je preuzeti pritiskom na naslov.<br><br>
             Hvala
+        ]]>
+    </string>
+
+    <string name="sideloaded_app">
+        <![CDATA[
+            It looks like your app version is corrupt. Please download the original version from  <a href="%s">here</a>.
         ]]>
     </string>
 
