--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -22,6 +22,7 @@
     <string name="transparent">Áttetsző</string>
     <string name="transparent_color">Áttetsző szín</string>
     <string name="select_a_different_color">Válasszon egy másik színt</string>
+    <string name="download">Download</string>
 
     <!-- Favorites -->
     <string name="favorites">Kedvencek</string>
@@ -399,6 +400,10 @@
     <string name="recycle_bin_cleaning_interval">Lomtár kiürítés időszak</string>
     <string name="empty_recycle_bin">Lomtár ürítése</string>
     <string name="force_portrait_mode">Álló mód kényszerítése</string>
+    <string name="export_settings">Export settings</string>
+    <string name="import_settings">Import settings</string>
+    <string name="settings_exported_successfully">Settings exported successfully</string>
+    <string name="settings_imported_successfully">Settings imported successfully</string>
 
     <!-- Setting sections -->
     <string name="visibility">Láthatóság</string>
@@ -540,7 +545,13 @@
             A címre kattintva lehet letölteni.<br><br>
             Köszönöm
         ]]>
-	</string>
+    </string>
+
+    <string name="sideloaded_app">
+        <![CDATA[
+            It looks like your app version is corrupt. Please download the original version from  <a href="%s">here</a>.
+        ]]>
+    </string>
 
     <!-- FAQ -->
     <string name="frequently_asked_questions">Gyakran Ismételt Kérdések</string>
