--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -22,6 +22,7 @@
     <string name="transparent">Transparan</string>
     <string name="transparent_color">Warna transparan</string>
     <string name="select_a_different_color">Pilih warna berbeda</string>
+    <string name="download">Download</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorit</string>
@@ -400,6 +401,10 @@
     <string name="recycle_bin_cleaning_interval">Interval waktu pengosongan Sampah</string>
     <string name="empty_recycle_bin">Kosongkan Sampah</string>
     <string name="force_portrait_mode">Paksa mode potret</string>
+    <string name="export_settings">Export settings</string>
+    <string name="import_settings">Import settings</string>
+    <string name="settings_exported_successfully">Settings exported successfully</string>
+    <string name="settings_imported_successfully">Settings imported successfully</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilitas</string>
@@ -540,6 +545,12 @@
             <a href="%1$s">%2$s</a><br><br>
             Anda bisa mendownloadnya dengan menekan judulnya.<br><br>
             Terima kasih
+        ]]>
+    </string>
+
+    <string name="sideloaded_app">
+        <![CDATA[
+            It looks like your app version is corrupt. Please download the original version from  <a href="%s">here</a>.
         ]]>
     </string>
 
