--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -22,6 +22,7 @@
     <string name="transparent">Şeffaf</string>
     <string name="transparent_color">Şeffaf renk</string>
     <string name="select_a_different_color">Farklı bir renk seçin</string>
+    <string name="download">Download</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriler</string>
@@ -400,6 +401,10 @@
     <string name="recycle_bin_cleaning_interval">Geri Dönüşüm Kutusu temizleme süresi</string>
     <string name="empty_recycle_bin">Geri Dönüşüm Kutusunu boşalt</string>
     <string name="force_portrait_mode">Dikey modu zorla</string>
+    <string name="export_settings">Export settings</string>
+    <string name="import_settings">Import settings</string>
+    <string name="settings_exported_successfully">Settings exported successfully</string>
+    <string name="settings_imported_successfully">Settings imported successfully</string>
 
     <!-- Setting sections -->
     <string name="visibility">Görünürlük</string>
@@ -540,6 +545,12 @@
             <a href="%1$s">%2$s</a><br><br>
             Başlığa basarak indirebilirsiniz.<br><br>
             Teşekkürler
+        ]]>
+    </string>
+
+    <string name="sideloaded_app">
+        <![CDATA[
+            It looks like your app version is corrupt. Please download the original version from  <a href="%s">here</a>.
         ]]>
     </string>
 
