--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -22,6 +22,7 @@
     <string name="transparent">透明</string>
     <string name="transparent_color">透明颜色</string>
     <string name="select_a_different_color">选择一个不同的颜色</string>
+    <string name="download">Download</string>
 
     <!-- Favorites -->
     <string name="favorites">收藏</string>
@@ -400,6 +401,10 @@
     <string name="recycle_bin_cleaning_interval">回收站清理间隔</string>
     <string name="empty_recycle_bin">清空回收站</string>
     <string name="force_portrait_mode">强制人像模式</string>
+    <string name="export_settings">Export settings</string>
+    <string name="import_settings">Import settings</string>
+    <string name="settings_exported_successfully">Settings exported successfully</string>
+    <string name="settings_imported_successfully">Settings imported successfully</string>
 
     <!-- Setting sections -->
     <string name="visibility">可见度</string>
@@ -540,6 +545,12 @@
             <a href="%1$s">%2$s</a><br><br>
             你可以点击标题来下载。<br><br>
             谢谢。
+        ]]>
+    </string>
+
+    <string name="sideloaded_app">
+        <![CDATA[
+            It looks like your app version is corrupt. Please download the original version from  <a href="%s">here</a>.
         ]]>
     </string>
 
