--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -22,7 +22,7 @@
     <string name="transparent">透明</string>
     <string name="transparent_color">透明顏色</string>
     <string name="select_a_different_color">選取不同的顏色</string>
-    <string name="download">Download</string>
+    <string name="download">下載</string>
 
     <!-- Favorites -->
     <string name="favorites">我的最愛</string>
@@ -401,10 +401,10 @@
     <string name="recycle_bin_cleaning_interval">回收桶清理間隔</string>
     <string name="empty_recycle_bin">清空回收桶</string>
     <string name="force_portrait_mode">強制直向模式</string>
-    <string name="export_settings">Export settings</string>
-    <string name="import_settings">Import settings</string>
-    <string name="settings_exported_successfully">Settings exported successfully</string>
-    <string name="settings_imported_successfully">Settings imported successfully</string>
+    <string name="export_settings">匯出設定</string>
+    <string name="import_settings">匯入設定</string>
+    <string name="settings_exported_successfully">設定匯出成功</string>
+    <string name="settings_imported_successfully">設定匯入成功</string>
 
     <!-- Setting sections -->
     <string name="visibility">可見度</string>
@@ -550,7 +550,7 @@
 
     <string name="sideloaded_app">
         <![CDATA[
-            It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
+            你的應用程式版本似乎是損壞的。請從 <a href="%s">這裡</a> 下載原始版本。
         ]]>
     </string>
 
